--- a/udacity-course/bhim_app/pubspec.yaml
+++ b/udacity-course/bhim_app/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  devtools: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +46,14 @@ flutter:
    - images/logo.png
    - images/reward.png
    - images/bell.png
+   - images/send.png
+   - images/receive.png
+   - images/scan.png
+   - images/newIcon.png
+   - images/mandate.png
+   - images/create.png
+   - images/scan2.png
+   - images/gift2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -57,17 +66,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Heebo
+      fonts:
+        - asset: fonts/Heebo-Bold.ttf
+        - asset: fonts/Heebo-ExtraBold.ttf
+        - asset: fonts/Heebo-Medium.ttf
+        - asset: fonts/Heebo-Regular.ttf
+        - asset: fonts/Heebo-Light.ttf
+    - family: Open Sans
+      fonts:
+        - asset: fonts/OpenSans-Regular.ttf
+       
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
