--- a/udacity-course/course/05_stateful_widgets/solution_05_stateful_widgets/pubspec.yaml
+++ b/udacity-course/course/05_stateful_widgets/solution_05_stateful_widgets/pubspec.yaml
@@ -1,6 +1,11 @@
 name: solution_05_stateful_widgets
 description: Work in progress for a Unit Converter app.
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
