--- a/udacity-course/course/08_responsive/task_08_responsive/pubspec.yaml
+++ b/udacity-course/course/08_responsive/task_08_responsive/pubspec.yaml
@@ -1,6 +1,11 @@
 name: task_08_responsive
 description: Work in progress for a Unit Converter app.
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
