--- a/udacity-course/course/12_error/solution_12_error/pubspec.yaml
+++ b/udacity-course/course/12_error/solution_12_error/pubspec.yaml
@@ -1,6 +1,11 @@
 name: solution_12_error
 description: Unit Converter App that takes in a value and unit and outputs a conversion in another unit.
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
