--- a/udacity-course/unit_converter/unit_converter/pubspec.yaml
+++ b/udacity-course/unit_converter/unit_converter/pubspec.yaml
@@ -1,6 +1,11 @@
 name: unit_converter
 description: Unit Converter App that takes in a value and unit and outputs a conversion in another unit.
 
+version: 1.0.0+1
+
+environment:
+  sdk: any
+
 dependencies:
   flutter:
     sdk: flutter
