--- a/easylist/pubspec.yaml
+++ b/easylist/pubspec.yaml
@@ -10,14 +10,12 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: any
 
 dependencies:
   flutter:
     sdk: flutter
-  validators: ^2.0.0+1
-
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
